[FIX] invisible pointer event

--- a/src/assets/scss/components/_dashboard.scss
+++ b/src/assets/scss/components/_dashboard.scss
@@ -120,9 +120,11 @@ $dashboard-separatorY: 20px;
             font-size: .8rem;
             opacity: 0;
             transition: all .3s ease-out;
+            pointer-events: none;
 
             &--active {
                 opacity: 1;
+                pointer-events: all;
             }
 
         }
