--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -18,6 +18,7 @@ $container-max-widths: (
 @import "~izitoast/dist/css/iziToast.min.css";
 @import "~react-confirm-alert/src/react-confirm-alert.css";
 
+@import "./override";
 @import "./colors";
 @import "./generic";
 @import "./medias";
@@ -27,11 +28,3 @@ $container-max-widths: (
 @import "./components/dashboard";
 @import "./components/modal";
 
-.react-confirm-alert-overlay {
-    z-index: 9999;
-    background: rgba(0, 0, 0, 0.8);
-}
-
-.react-confirm-alert-button-group > button:last-child {
-    background: #dc3545;
-}
